[package]
authors = ['Narrowlink <opensource@narrowlink.com>', 'Nullchinchilla <nullchinchilla@pm.me>']
description = 'Asynchronous lightweight userspace implementation of TCP/IP stack for transparent proxies'
name = "ipstack-geph"
version = "0.2.4"
edition = "2021"
license = "Apache-2.0"
repository = 'https://github.com/geph-official/ipstack'
# homepage = 'https://github.com/narrowlink/ipstack'
readme = "README.md"

[dependencies]
ahash = "0.8"

etherparse = { version = "0.14", default-features = false, features = ["std"] }
thiserror = { version = "1.0", default-features = false }
log = { version = "0.4", default-features = false }
rand = { version = "0.8.5", default-features = false, features = [
    "std",
    "std_rng",
] }
anyhow = "1.0.83"
bytes = "1.6.0"
async-channel = "2.3.0"
async-executor = "1.11.0"
futures-lite = "2.3.0"
parking_lot = "0.12.2"
async-io = "2.3.2"
pollster = "0.3.0"
smol-timeout = "0.6.0"

[dev-dependencies]
criterion="0.5"

